2006-03-30  Martin Hunt  <hunt@redhat.com>

	* emul.h (kmalloc_node): New.

2006-01-25  Martin Hunt  <hunt@redhat.com>

	* alloc.c (_stp_alloc_percpu): New function.
	(_stp_free_percpu): New function.

2005-12-14  Martin Hunt  <hunt@redhat.com>

	* emul.h: Add fake spinlock funcs.

2005-12-07  Martin Hunt  <hunt@redhat.com>

	* alloc.c: Remove all unused functions.
	* io.c: Add vprintf() prototype.

2005-11-29  Martin Hunt  <hunt@redhat.com>

	* recreate_links: Remove links to deleted files.

2005-11-08  Martin Hunt  <hunt@redhat.com>

	* recreate_links: Add link to pmap-gen.c
	* print.c (next_fmt): Remove unneeded dbug().
	* alloc.c: Update to reflect changes to runtime/alloc.c.
	
2005-10-26  Martin Hunt  <hunt@redhat.com>

	* recreate_links: Add link to map-gen.c.

2005-09-09  Martin Hunt  <hunt@redhat.com>

	* runtime.h: Add arith.c
	* recreate_links: Add arith.c
	* emul.h: Define jiffies so arith.c will compile.

2005-08-31  Martin Hunt  <hunt@redhat.com>

	* emul.h (_stp_kallsyms_lookup): Renamed from kallsyms_lookup.
	* runtime.h: Add prototype for exit();
	* copy.c: New file. Just some empty functions.

2005-08-19  Martin Hunt  <hunt@redhat.com>

	* runtime.h: Include io.c.

2005-07-14  Frank Ch. Eigler  <fche@redhat.com>

	* alloc.c (_stp_error): Rename, to avoid name collision with ../io.c.

2005-06-22  Martin Hunt  <hunt@redhat.com>

	* runtime.h: Include config.h first then redefine CONFIG_SMP
	and NR_CPUS.
