@@ -1,3 +1,8 @@
+2006-09-26  David Smith  <dsmith@redhat.com>
+
+	* io.c: Changed 'stpd' references to 'staprun'.
+	* print.c: Ditto.
+
 2006-03-30  Martin Hunt  <hunt@redhat.com>
 
 	* emul.h (kmalloc_node): New.
